--- a/project.config.json
+++ b/project.config.json
@@ -1,28 +1,32 @@
 {
-  "appid": "wx9ab5a6392cc7b4b4",
-  "compileType": "miniprogram",
-  "libVersion": "3.6.0",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
-  "setting": {
-    "coverView": true,
-    "es6": true,
-    "postcss": true,
-    "minified": true,
-    "enhance": true,
-    "showShadowRootInWxmlPanel": true,
-    "packNpmRelationList": [],
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
-    }
-  },
-  "condition": {},
-  "editorSetting": {
-    "tabIndent": "insertSpaces",
-    "tabSize": 2
-  }
+	"appid": "wx9ab5a6392cc7b4b4",
+	"compileType": "miniprogram",
+	"libVersion": "3.6.0",
+	"packOptions": {
+		"ignore": [],
+		"include": []
+	},
+	"setting": {
+		"coverView": true,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
+		"enhance": true,
+		"showShadowRootInWxmlPanel": true,
+		"packNpmManually": true,
+		"packNpmRelationList": [{
+			"packageJsonPath": "./package.json",
+			"miniprogramNpmDistDir": "./miniprogram/"
+		}],
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
+	},
+	"condition": {},
+	"editorSetting": {
+		"tabIndent": "insertSpaces",
+		"tabSize": 2
+	}
 }
