--- a/leave-framework/pom.xml
+++ b/leave-framework/pom.xml
@@ -58,6 +58,15 @@
             <groupId>com.leave</groupId>
             <artifactId>leave-system</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.21</version>
+        </dependency>
 
     </dependencies>
 
