--- a/leave-framework/pom.xml
+++ b/leave-framework/pom.xml
@@ -67,6 +67,16 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>tea-openapi</artifactId>
+            <version>0.3.6</version>
+        </dependency>
 
     </dependencies>
 
